--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "React Avançado - Boilerplate",
-  "short_name": "React Avançado",
+  "name": "My Future Trips",
+  "short_name": "My Future Trips",
   "icons": [
     {
       "src": "/img/icon-192.png",
@@ -15,7 +15,7 @@
   ],
   "theme_color": "#FFFFFF",
   "background_color": "#06092b",
-  "description": "Simple Next.js boilerplate with lint-staged, husky, eslint + prettier, jest, storybook and styled-components",
+  "description": "This project shows the places I want to visit!",
   "start_url": "/",
   "display": "fullscreen",
   "orientation": "portrait"
