--- a/package.json
+++ b/package.json
@@ -10,14 +10,8 @@
     "typecheck": "tsc --project tsconfig.json --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
-    "generate": "yarn plop --plopfile ./generators/plopfile.js"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
-    }
+    "generate": "yarn plop --plopfile ./generators/plopfile.js",
+    "prepare": "husky install"
   },
   "lint-staged": {
     "src/**/*": [
@@ -58,7 +52,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^5.1.3",
+    "husky": "5",
     "jest": "^26.6.3",
     "jest-styled-components": "^7.0.3",
     "lint-staged": "^10.5.4",
