--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "10.0.7",
     "next-pwa": "^5.0.5",
     "next-seo": "^4.20.0",
+    "next-sitemap": "^1.6.3",
     "nextjs-progressbar": "^0.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
